--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -7,12 +7,12 @@
 *::before,
 *::after {
   -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 html {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-size: 62.5%;
 }
 
@@ -23,11 +23,17 @@ html {
 }
 
 body {
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-weight: 400;
   line-height: 1.6;
   color: #615551;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#fbdb89), to(#f48982));
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right bottom,
+    from(#fbdb89),
+    to(#f48982)
+  );
   background-image: linear-gradient(to right bottom, #fbdb89, #f48982);
   background-size: cover;
   background-repeat: no-repeat;
@@ -42,14 +48,16 @@ body {
   border-radius: 9px;
   overflow: hidden;
   -webkit-box-shadow: 0 2rem 6rem 0.5rem rgba(97, 85, 81, 0.2);
-          box-shadow: 0 2rem 6rem 0.5rem rgba(97, 85, 81, 0.2);
+  box-shadow: 0 2rem 6rem 0.5rem rgba(97, 85, 81, 0.2);
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: 10rem minmax(100rem, auto);
-      grid-template-rows: 10rem minmax(100rem, auto);
+  grid-template-rows: 10rem minmax(100rem, auto);
   -ms-grid-columns: 1fr 2fr;
-      grid-template-columns: 1fr 2fr;
-      grid-template-areas: 'head head' 'list recipe';
+  grid-template-columns: 1fr 2fr;
+  grid-template-areas:
+    "head head"
+    "list recipe";
 }
 
 @media only screen and (max-width: 78.15em) {
@@ -60,8 +68,17 @@ body {
   }
 }
 
-.btn, .btn--small, .btn--small:link, .btn--small:visited {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#fbdb89), to(#f48982));
+.btn,
+.btn--small,
+.btn--small:link,
+.btn--small:visited {
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right bottom,
+    from(#fbdb89),
+    to(#f48982)
+  );
   background-image: linear-gradient(to right bottom, #fbdb89, #f48982);
   border-radius: 10rem;
   border: none;
@@ -72,22 +89,25 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
 
-.btn:hover, .btn--small:hover {
+.btn:hover,
+.btn--small:hover {
   -webkit-transform: scale(1.05);
-          transform: scale(1.05);
+  transform: scale(1.05);
 }
 
-.btn:focus, .btn--small:focus {
+.btn:focus,
+.btn--small:focus {
   outline: none;
 }
 
-.btn > *:first-child, .btn--small > *:first-child {
+.btn > *:first-child,
+.btn--small > *:first-child {
   margin-right: 1rem;
 }
 
@@ -103,14 +123,18 @@ body {
   fill: currentColor;
 }
 
-.btn--small, .btn--small:link, .btn--small:visited {
+.btn--small,
+.btn--small:link,
+.btn--small:visited {
   font-size: 1.4rem;
   font-weight: 600;
   padding: 1.25rem 2.25rem;
   text-decoration: none;
 }
 
-.btn--small svg, .btn--small:link svg, .btn--small:visited svg {
+.btn--small svg,
+.btn--small:link svg,
+.btn--small:visited svg {
   height: 1.75rem;
   width: 1.75rem;
   fill: currentColor;
@@ -129,8 +153,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
@@ -156,7 +180,13 @@ body {
 }
 
 .btn--round {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#fbdb89), to(#f48982));
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right bottom,
+    from(#fbdb89),
+    to(#f48982)
+  );
   background-image: linear-gradient(to right bottom, #fbdb89, #f48982);
   border-radius: 50%;
   border: none;
@@ -169,16 +199,16 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .btn--round:hover {
   -webkit-transform: scale(1.07);
-          transform: scale(1.07);
+  transform: scale(1.07);
 }
 
 .btn--round:focus {
@@ -214,13 +244,13 @@ body {
 .btn--tiny:hover svg {
   fill: #f48982;
   -webkit-transform: translateY(-1px);
-          transform: translateY(-1px);
+  transform: translateY(-1px);
 }
 
 .btn--tiny:active svg {
   fill: #f48982;
   -webkit-transform: translateY(0);
-          transform: translateY(0);
+  transform: translateY(0);
 }
 
 .btn--tiny:not(:last-child) {
@@ -251,28 +281,28 @@ body {
   width: 6rem;
   fill: #f38e82;
   -webkit-animation: rotate 2s infinite linear;
-          animation: rotate 2s infinite linear;
+  animation: rotate 2s infinite linear;
 }
 
 @-webkit-keyframes rotate {
   0% {
     -webkit-transform: rotate(0);
-            transform: rotate(0);
+    transform: rotate(0);
   }
   100% {
     -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
 @keyframes rotate {
   0% {
     -webkit-transform: rotate(0);
-            transform: rotate(0);
+    transform: rotate(0);
   }
   100% {
     -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
@@ -292,7 +322,7 @@ body {
   width: 3rem;
   fill: #f38e82;
   -webkit-transform: translateY(-0.3rem);
-          transform: translateY(-0.3rem);
+  transform: translateY(-0.3rem);
 }
 
 .message p,
@@ -313,11 +343,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .header__logo {
@@ -333,8 +363,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding-left: 3rem;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -342,9 +372,9 @@ body {
 
 .search:focus-within {
   -webkit-transform: translateY(-2px);
-          transform: translateY(-2px);
+  transform: translateY(-2px);
   -webkit-box-shadow: 0 0.7rem 3rem rgba(97, 85, 81, 0.08);
-          box-shadow: 0 0.7rem 3rem rgba(97, 85, 81, 0.08);
+  box-shadow: 0 0.7rem 3rem rgba(97, 85, 81, 0.08);
 }
 
 .search__field {
@@ -401,8 +431,8 @@ body {
 
 .nav {
   -ms-flex-item-align: stretch;
-      -ms-grid-row-align: stretch;
-      align-self: stretch;
+  -ms-grid-row-align: stretch;
+  align-self: stretch;
   margin-right: 2.5rem;
 }
 
@@ -435,8 +465,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .nav__btn svg {
@@ -445,7 +475,7 @@ body {
   fill: #f38e82;
   margin-right: 0.7rem;
   -webkit-transform: translateY(-1px);
-          transform: translateY(-1px);
+  transform: translateY(-1px);
 }
 
 .nav__btn:focus {
@@ -464,7 +494,7 @@ body {
   width: 40rem;
   background-color: #fff;
   -webkit-box-shadow: 0 0.8rem 5rem 2rem rgba(97, 85, 81, 0.1);
-          box-shadow: 0 0.8rem 5rem 2rem rgba(97, 85, 81, 0.1);
+  box-shadow: 0 0.8rem 5rem 2rem rgba(97, 85, 81, 0.1);
   visibility: hidden;
   opacity: 0;
   -webkit-transition: all 0.5s 0.2s;
@@ -482,8 +512,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   height: 100%;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -499,13 +529,14 @@ body {
   opacity: 1;
 }
 
-.preview__link:link, .preview__link:visited {
+.preview__link:link,
+.preview__link:visited {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 1.5rem 3.25rem;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -516,7 +547,7 @@ body {
 .preview__link:hover {
   background-color: #f9f5f3;
   -webkit-transform: translateY(-2px);
-          transform: translateY(-2px);
+  transform: translateY(-2px);
 }
 
 .preview__link--active {
@@ -525,26 +556,32 @@ body {
 
 .preview__fig {
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 5.8rem;
-          flex: 0 0 5.8rem;
+  -ms-flex: 0 0 5.8rem;
+  flex: 0 0 5.8rem;
   border-radius: 50%;
   overflow: hidden;
   height: 5.8rem;
   margin-right: 2rem;
   position: relative;
   -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .preview__fig::before {
-  content: '';
+  content: "";
   display: block;
   height: 100%;
   width: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#fbdb89), to(#f48982));
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right bottom,
+    from(#fbdb89),
+    to(#f48982)
+  );
   background-image: linear-gradient(to right bottom, #fbdb89, #f48982);
   opacity: 0.4;
 }
@@ -554,7 +591,7 @@ body {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
@@ -564,11 +601,11 @@ body {
   display: grid;
   width: 100%;
   -ms-grid-columns: 1fr 2rem;
-      grid-template-columns: 1fr 2rem;
+  grid-template-columns: 1fr 2rem;
   row-gap: 0.1rem;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .preview__title {
@@ -596,11 +633,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   height: 2rem;
   width: 2rem;
   border-radius: 10rem;
@@ -621,8 +658,8 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 .results {
@@ -636,7 +673,7 @@ body {
 }
 
 .pagination::after {
-  content: '';
+  content: "";
   display: table;
   clear: both;
 }
@@ -669,18 +706,24 @@ body {
   height: 32rem;
   position: relative;
   -webkit-transform-origin: top;
-          transform-origin: top;
+  transform-origin: top;
 }
 
 .recipe__fig::before {
-  content: '';
+  content: "";
   display: block;
   height: 100%;
   width: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#fbdb89), to(#f48982));
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right bottom,
+    from(#fbdb89),
+    to(#f48982)
+  );
   background-image: linear-gradient(to right bottom, #fbdb89, #f48982);
   opacity: 0.6;
 }
@@ -690,7 +733,7 @@ body {
   display: block;
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .recipe__title {
@@ -698,7 +741,7 @@ body {
   bottom: 0;
   left: 50%;
   -webkit-transform: translate(-50%, 20%) skewY(-6deg);
-          transform: translate(-50%, 20%) skewY(-6deg);
+  transform: translate(-50%, 20%) skewY(-6deg);
   color: #fff;
   font-weight: 700;
   font-size: 3.25rem;
@@ -712,7 +755,13 @@ body {
   -webkit-box-decoration-break: clone;
   box-decoration-break: clone;
   padding: 1.3rem 2rem;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#fbdb89), to(#f48982));
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right bottom,
+    from(#fbdb89),
+    to(#f48982)
+  );
   background-image: linear-gradient(to right bottom, #fbdb89, #f48982);
 }
 
@@ -727,8 +776,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 7.5rem 8rem 3.5rem 8rem;
 }
 
@@ -739,8 +788,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .recipe__info:not(:last-child) {
@@ -765,7 +814,7 @@ body {
   display: flex;
   margin-left: 1.6rem;
   -webkit-transform: translateY(-1px);
-          transform: translateY(-1px);
+  transform: translateY(-1px);
 }
 
 .recipe__user-generated {
@@ -774,11 +823,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   height: 4rem;
   width: 4rem;
   border-radius: 10rem;
@@ -802,18 +851,18 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .recipe__ingredient-list {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   gap: 2.5rem 3rem;
   list-style: none;
 }
@@ -830,16 +879,16 @@ body {
   fill: #f38e82;
   margin-right: 1.1rem;
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 auto;
-          flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
   margin-top: 0.1rem;
 }
 
 .recipe__quantity {
   margin-right: 0.5rem;
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 auto;
-          flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
 }
 
 .recipe__directions {
@@ -850,11 +899,11 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .recipe__directions-text {
@@ -873,13 +922,13 @@ body {
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   width: 100rem;
   background-color: white;
   border-radius: 9px;
   padding: 5rem 6rem;
   -webkit-box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.25);
-          box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.25);
   z-index: 1000;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
@@ -905,7 +954,7 @@ body {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
   -webkit-backdrop-filter: blur(4px);
-          backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
   z-index: 100;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
@@ -920,7 +969,7 @@ body {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   gap: 4rem 6rem;
 }
 
@@ -928,10 +977,10 @@ body {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 2.8fr;
-      grid-template-columns: 1fr 2.8fr;
+  grid-template-columns: 1fr 2.8fr;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   gap: 1.5rem;
 }
 
@@ -977,7 +1026,7 @@ body {
   -ms-grid-column-span: 2;
   grid-column: 1 / span 2;
   -ms-grid-column-align: center;
-      justify-self: center;
+  justify-self: center;
   margin-top: 1rem;
 }
 
@@ -992,6 +1041,17 @@ body {
 .upload__btn {
   grid-column: 1 / -1;
   -ms-grid-column-align: center;
-      justify-self: center;
+  justify-self: center;
+}
+
+@media (max-width: 750px) {
+  body {
+    width: 100vw;
+  }
+
+  .header {
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
 }
 /*# sourceMappingURL=main.css.map */
