--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1060,14 +1060,14 @@ body {
   }
 
   .header__logo {
+    height: 3.8rem;
     margin: 1rem;
-    margin-top: 0;
+    margin-top: 1rem;
   }
 
   .search {
     padding-left: 1.2rem;
-    height: 3.8rem;
-    margin: 0;
+    height: 4.2rem;
   }
 
   .search__btn {
@@ -1076,8 +1076,10 @@ body {
   }
 
   .nav {
-    align-self: center;
-    margin-top: 2.5rem;
+    align-self: end;
+    margin-top: 1.5rem;
+    margin-bottom: 0.5rem;
+    margin-right: 0;
   }
 
   .message,
