--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1082,10 +1082,10 @@ body {
     margin-right: 0;
   }
 
-  /* .message,
+  .message,
   .error,
   .recipe {
     display: none;
-  } */
+  }
 }
 /*# sourceMappingURL=main.css.map */
