--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1063,11 +1063,6 @@ body {
     justify-content: space-around;
   }
 
-  /* .search__btn {
-    height: 3.5rem;
-    padding: 2rem;
-  } */
-
   .search {
     position: fixed;
     bottom: 0;
@@ -1102,6 +1097,18 @@ body {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+  }
+}
+
+@media (max-width: 335px) {
+  .search {
+    margin: auto;
+  }
+
+  .search__btn {
+    height: 5rem;
+    padding: 2rem 1rem;
+    width: 30vw;
   }
 }
 
