--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1084,12 +1084,6 @@ body {
     order: 0;
   }
 
-  .search-results {
-    margin-top: 1rem;
-    order: 2;
-    padding: 0;
-  }
-
   .recipe {
     order: 1;
   }
@@ -1105,6 +1099,13 @@ body {
     grid-auto-flow: column;
     grid-template-rows: repeat(2, 60%);
     justify-content: space-between;
+  }
+
+  .search-results {
+    margin-top: 1rem;
+    margin-bottom: 8vh;
+    order: 2;
+    padding: 0;
   }
 }
 
