--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1107,6 +1107,11 @@ body {
     order: 2;
     padding: 0;
   }
+
+  .search-results ul {
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+  }
 }
 
 @media (max-width: 335px) {
