--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1048,7 +1048,7 @@ body {
     flex-direction: column;
     height: 14vh;
     padding: 0;
-    margin-bottom: 3vh;
+    padding-bottom: 2vh;
   }
 
   .header__logo {
@@ -1110,7 +1110,11 @@ body {
 
   .search-results ul {
     display: grid;
-    grid-template-columns: repeat(2, 50%);
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .error {
+    grid-column-start: span 2;
   }
 }
 
