--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1117,6 +1117,10 @@ body {
   .spinner {
     grid-column-start: span 2;
   }
+
+  .preview__link:link {
+    padding: 1rem;
+  }
 }
 
 @media (max-width: 335px) {
