--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1032,6 +1032,29 @@ body {
   justify-self: center;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: grey;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(30, 30, 30);
+}
+
+.bookmarks {
+  max-height: 80vh;
+  overflow-y: scroll;
+}
+
 @media (max-width: 750px) {
   body {
     width: 100vw;
