--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1051,8 +1051,8 @@ body {
 }
 
 .bookmarks {
-  max-height: 80vh;
   overflow-y: scroll;
+  overflow-x: none;
 }
 
 @media (max-width: 750px) {
@@ -1060,6 +1060,10 @@ body {
     width: 100vw;
     margin: 0;
     padding: 0;
+  }
+
+  ::-webkit-scrollbar {
+    width: 6px;
   }
 
   .container {
@@ -1143,6 +1147,11 @@ body {
 
   .preview__link:link {
     padding: 1rem;
+  }
+
+  .bookmarks {
+    max-height: 70vh;
+    width: 65vw;
   }
 }
 
