--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1139,7 +1139,8 @@ body {
 
   .search-results ul {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-auto-flow: column;
+    grid-template-rows: repeat(3, 1fr);
   }
 
   .error,
